force-app/main/default/objects/Pricebook2/fields/CodigoUN__c.field-meta.xml
<CustomField>
    <fullName>CodigoUN__c</fullName>
    <description>Código de Unidad de Negocio</description>
    <label>Codigo UN</label>
    <length>2</length>
    <type>Text</type>
</CustomField>