force-app/main/default/objects/Pricebook2/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listas de precios</relationshipLabel>
    <relationshipName>Listas_de_precios</relationshipName>
    <type>Lookup</type>
</CustomField>