force-app/main/default/objects/Pricebook2/fields/Tipo_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cuenta__c</fullName>
    <label>Tipo de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>Sin clasificacion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>